2016-05-13  Yavor Doganov  <yavor@gnu.org>

	* Instance/framework.make:
	Forgotten patch to allow multiple versions of a framework to be
	installed.
	* Documentation/GNUmakefile:
	* Instance/Documentation/texi.make:
	Forgotten patch to update for newere makeinfo which produces html.

2016-05-13 Richard Frith-Macdonald <rfm@gnu.org>

	* GNUmakefile.in:
	* TestFramework/gnustep-tests.in:
	* config.make.in:
	* common.make:
	* library-combo.make:
	* configure.ac:
	* configure:
	Minor tweaks... use ARC by default if ng runtime is specified

2016-03-25 Richard Frith-Macdonald <rfm@gnu.org>

	* common.make:
	* config.make.in:
	* configure.ac:
	* library-combo.make:
	* Documentation/library-combo.7:
	* TestFramework/Testing.h:
	* configure:
	Remove garbage collection support

2016-03-04 Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Enable strict v2 mode by default
	* configure: regenerate
	* README.Packaging: Warn about updating ancient makefiles
	* Documentation/library-combo.7: Talk about ng runtime
	* Version:
	* Documentation/news.texi:
	* Documentation/releasenotes.texi:
	Update prior to new release

2016-03-02 Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Improve selection of clang when 'ng' runtime library
	is selected.
	* configure: Regenerate.
	* library-combo.make: Add support for ARC with the 'ng' runtime
	setting.  Enabled by defining GS_WITH_ARC=1 at the start of the
	GNUmakefile or in the environment or in the 'make' arguments.

2016-03-02 Niels Grewe <niels.grewe@halbordnung.de>

	* Master/documentation.make:
	Support skipping the documentation build if documentation=no
	is supplied
	* Documentation/gnustep-make.texi:
	Document the new documentation=no feature (and messages=yes, which
	as also missing).

2015-12-11 23:34-EST Gregory John Casamento <greg.casamento@gmail.com>

	* common.make: Mute error when trying to parse redhat-version
	file.

2015-11-26 Ivan Vucica <ivan@vucica.net>

	* ChangeLog:
	Fixed dates on some previous entries.
